[package]
name = "iroha_client"

edition.workspace = true
version.workspace = true
authors.workspace = true

description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

license.workspace = true
keywords.workspace = true
categories.workspace = true

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/hyperledger/iroha" }
is-it-maintained-open-issues = { repository = "https://github.com/hyperledger/iroha" }
maintenance = { status = "actively-developed" }

[dependencies]
iroha_config = { version = "=2.0.0-pre-rc.13", path = "../config" }
iroha_crypto = { version = "=2.0.0-pre-rc.13", path = "../crypto"}
iroha_data_model = { version = "=2.0.0-pre-rc.13", path = "../data_model", features = ["http"] }
iroha_primitives = { version = "=2.0.0-pre-rc.13", path = "../primitives" }
iroha_logger = { version = "=2.0.0-pre-rc.13", path = "../logger"}
iroha_telemetry = { version ="=2.0.0-pre-rc.13", path = "../telemetry" }
iroha_version = { version = "=2.0.0-pre-rc.13", path = "../version", features = ["http"] }

attohttpc = "0.18.0"
eyre = "0.6.8"
http = "0.2.8"
rand = "0.8.5"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
base64 = "0.13.1"
thiserror = "1.0.38"
derive_more = "0.99.17"
parity-scale-codec = { version = "3.2.1", default-features = false, features = ["derive"] }
tokio = { version = "1.23.0", features = ["rt"] }
tokio-tungstenite = { version = "0.16", features = ["native-tls"] }
tungstenite = { version = "0.16", features = ["native-tls"] }
futures-util = "0.3.25"

[dev-dependencies]
iroha_wasm_builder = { version = "=2.0.0-pre-rc.13", path = "../wasm_builder" }

# TODO: These three activate `transparent_api` but client should never activate this feature.
# Additionally there is a dependency on iroha_core in dev-dependencies in telemetry/derive
# Hopefully, once the integration tests migration is finished these can be removed
iroha = { path = "../cli", features = ["dev-telemetry", "telemetry"] }
iroha_genesis = { version = "=2.0.0-pre-rc.13", path = "../genesis"}
test_network = { version = "=2.0.0-pre-rc.13", path = "../core/test_network" }

tokio = { version = "1.23.0", features = ["rt-multi-thread"] }
criterion = { version = "0.3.6", features = ["html_reports"] }
color-eyre = "0.6.2"
tempfile = "3.3.0"
hex = "0.4.3"

tracing-subscriber = { version = "0.3.16", default-features = false, features = ["fmt", "ansi"] }
tracing-flame = "0.2.0"
once_cell = "1.16.0"

[build-dependencies]
eyre = "0.6.8"
iroha_wasm_builder = { version = "=2.0.0-pre-rc.13", path = "../wasm_builder" }

[[bench]]
name = "torii"
harness = false

[[bench]]
name = "tps-dev"
harness = false
path = "benches/tps/dev.rs"

[[example]]
name = "tps-oneshot"
harness = false
path = "benches/tps/oneshot.rs"
