[package]
name = "iroha_client"

edition.workspace = true
version.workspace = true
authors.workspace = true

description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/hyperledger/iroha" }
is-it-maintained-open-issues = { repository = "https://github.com/hyperledger/iroha" }
maintenance = { status = "actively-developed" }

[dependencies]
iroha_config = { workspace = true }
iroha_crypto = { workspace = true }
iroha_data_model = { workspace = true, features = ["http"] }
iroha_primitives = { workspace = true }
iroha_logger = { workspace = true }
iroha_telemetry = { workspace = true }
iroha_version = { workspace = true, features = ["http"] }

attohttpc = "0.18.0"
eyre = { workspace = true }
http = "0.2.8"
url = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
displaydoc = { workspace = true }
derive_more = { workspace = true }
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }
tokio = { workspace = true, features = ["rt"] }
# TODO: migrate to tokio-tungstenite 0.17 (or newer) and use the workspace dependency
tokio-tungstenite = { version = "0.16.1", features = ["native-tls"] }
tungstenite = { version = "0.16", features = ["native-tls"] }
futures-util = "0.3.25"

[dev-dependencies]
iroha_wasm_builder = { workspace = true }

# TODO: These three activate `transparent_api` but client should never activate this feature.
# Additionally there is a dependency on iroha_core in dev-dependencies in telemetry/derive
# Hopefully, once the integration tests migration is finished these can be removed
iroha = { workspace = true, features = ["dev-telemetry", "telemetry"] }
iroha_genesis = { workspace = true }
test_network = { workspace = true }

tokio = { workspace = true, features = ["rt-multi-thread"] }
criterion = { workspace = true, features = ["html_reports"] }
color-eyre = { workspace = true }
tempfile = { workspace = true }
hex = { workspace = true }

tracing-subscriber = { workspace = true, features = ["fmt", "ansi"] }
tracing-flame = "0.2.0"
once_cell = { workspace = true }

[build-dependencies]
eyre = { workspace = true }
iroha_wasm_builder = { workspace = true }

[[bench]]
name = "torii"
harness = false

[[bench]]
name = "tps-dev"
harness = false
path = "benches/tps/dev.rs"

[[example]]
name = "tps-oneshot"
harness = false
path = "benches/tps/oneshot.rs"
