[package]
name = "iroha_client"

edition.workspace = true
version.workspace = true
authors.workspace = true

description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/hyperledger/iroha" }
is-it-maintained-open-issues = { repository = "https://github.com/hyperledger/iroha" }
maintenance = { status = "actively-developed" }

[features]
# Use rustls by default to avoid OpenSSL dependency, simplifying compilation with musl
default = ["tls-rustls-native-roots"]

tls-native = [
    "attohttpc/tls-native",
    "tokio-tungstenite/native-tls",
    "tungstenite/native-tls",
]
tls-native-vendored = [
    "attohttpc/tls-native-vendored",
    "tokio-tungstenite/native-tls-vendored",
    "tungstenite/native-tls-vendored",
]
tls-rustls-native-roots = [
    "attohttpc/tls-rustls-native-roots",
    "tokio-tungstenite/rustls-tls-native-roots",
    "tungstenite/rustls-tls-native-roots",
]
tls-rustls-webpki-roots = [
    "attohttpc/tls-rustls-webpki-roots",
    "tokio-tungstenite/rustls-tls-webpki-roots",
    "tungstenite/rustls-tls-webpki-roots",
]

[dependencies]
iroha_config = { workspace = true }
iroha_crypto = { workspace = true }
iroha_data_model = { workspace = true, features = ["http"] }
iroha_primitives = { workspace = true }
iroha_logger = { workspace = true }
iroha_telemetry = { workspace = true }
iroha_torii_const = { workspace = true }
iroha_version = { workspace = true, features = ["http"] }
test_samples = { workspace = true }

attohttpc = { version = "0.28.0", default-features = false }
eyre = { workspace = true }
http = "1.1.0"
url = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
displaydoc = { workspace = true }
derive_more = { workspace = true }
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }
tokio = { workspace = true, features = ["rt"] }
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true }
futures-util = "0.3.30"
merge = "0.1.0"
toml = { workspace = true }
nonzero_ext = { workspace = true }

[dev-dependencies]
iroha_wasm_builder = { workspace = true }

# TODO: These three activate `transparent_api` but client should never activate this feature.
# Additionally there is a dependency on iroha_core in dev-dependencies in telemetry/derive
# Hopefully, once the integration tests migration is finished these can be removed
iroha = { workspace = true }
iroha_genesis = { workspace = true }
test_network = { workspace = true }

tokio = { workspace = true, features = ["rt-multi-thread"] }
criterion = { workspace = true, features = ["html_reports"] }
color-eyre = { workspace = true }
tempfile = { workspace = true }
hex = { workspace = true }

tracing-subscriber = { workspace = true, features = ["fmt", "ansi"] }
tracing-flame = "0.2.0"
once_cell = { workspace = true }

[build-dependencies]
eyre = { workspace = true }
iroha_wasm_builder = { workspace = true }

[[bench]]
name = "torii"
harness = false

[[bench]]
name = "tps-dev"
harness = false
path = "benches/tps/dev.rs"

[[example]]
name = "tps-oneshot"
harness = false
path = "benches/tps/oneshot.rs"
