[package]
name = "iroha_client_cli"
version = "2.0.0-pre-rc.9"
authors = ["Iroha 2 team <https://github.com/orgs/soramitsu/teams/iroha2>"]
edition = "2021"
description = "Iroha CLI Client provides an ability to interact with Iroha Peers Web API without direct network usage. It's a `light` client which only converts Command Line Interface commands into Iroha Web API Network Requests."
readme = "README.md"
homepage = "https://github.com/hyperledger/iroha/tree/iroha2-dev"
repository = "https://github.com/hyperledger/iroha/tree/iroha2-dev"
license = "Apache-2.0"
keywords = ["crypto", "blockchain", "ledger", "iroha", "client"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/hyperledger/iroha" }
is-it-maintained-open-issues = { repository = "https://github.com/hyperledger/iroha" }
maintenance = { status = "actively-developed" }

[dependencies]
iroha_client = { version = "=2.0.0-pre-rc.9", path = "../client" }
iroha_data_model = { version = "=2.0.0-pre-rc.9", path = "../data_model" }
iroha_crypto = { version = "=2.0.0-pre-rc.9", path = "../crypto" }
iroha_config = { version = "=2.0.0-pre-rc.9", path = "../config" }

color-eyre = "0.6.2"
clap = { version = "3.2.16", features = ["derive"] }
dialoguer = { version = "0.10.2", default-features = false }
serde_json = "1.0.83"

[build-dependencies]
anyhow = "1.0.60"
vergen = { version = "7.3.2", default-features = false, features = ["git"] }
