[package]
name = "iroha_client_cli"

edition.workspace = true
version.workspace = true
authors.workspace = true

description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

license.workspace = true
keywords.workspace = true
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]

[lints]
workspace = true

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/hyperledger/iroha" }
is-it-maintained-open-issues = { repository = "https://github.com/hyperledger/iroha" }
maintenance = { status = "actively-developed" }

[dependencies]
iroha_client = { workspace = true }
iroha_primitives = { workspace = true }

color-eyre = { workspace = true }
# TODO: migrate to clap v4 (and use the workspace dependency)
clap = { version = "3.2.25", features = ["derive"] }
dialoguer = { version = "0.11.0", default-features = false }
json5 = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }
erased-serde = "0.3.31"

[build-dependencies]
vergen = { version = "8.2.5", default-features = false }
color-eyre = "0.6.2"
