[package]
name = "iroha_client_cli"

edition.workspace = true
version.workspace = true
authors.workspace = true

description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

license.workspace = true
keywords.workspace = true
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]

[lints]
workspace = true

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/hyperledger/iroha" }
is-it-maintained-open-issues = { repository = "https://github.com/hyperledger/iroha" }
maintenance = { status = "actively-developed" }

[[bin]]
name = "iroha"
path = "src/main.rs"

[dependencies]
iroha = { workspace = true }
iroha_primitives = { workspace = true }
iroha_config_base = { workspace = true }

thiserror = { workspace = true }
error-stack = { workspace = true, features = ["eyre"] }
eyre = { workspace = true }
clap = { workspace = true, features = ["derive"] }
json5 = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
erased-serde = "0.4.5"
supports-color = { workspace = true }

[build-dependencies]
vergen = { version = "8.3.1", default-features = false }
color-eyre = "0.6.3"
