[package]
name = "iroha_config"

edition.workspace = true
version.workspace = true
authors.workspace = true

license.workspace = true

[dependencies]
iroha_config_base = { path = "base" }
iroha_data_model = { version = "=2.0.0-pre-rc.13", path = "../data_model" }
iroha_primitives = { version = "=2.0.0-pre-rc.13", path = "../primitives" }
iroha_crypto = { version = "=2.0.0-pre-rc.13", path = "../crypto" }

eyre = "0.6.8"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["fmt", "ansi"] }
url = { version = "2.3.1", features = ["serde"] }

serde = { version = "1.0.151", default-features = false, features = ["derive"] }
strum = { version = "0.24.1", default-features = false, features = ["derive"] }
serde_json = "1.0.91"
json5 = "0.4.1"
thiserror = "1.0.38"
derive_more = "0.99.17"
cfg-if = "1.0.0"
path-absolutize = "3.0.14"

[dev-dependencies]
proptest = "1.0.0"

[features]
default = []
tokio-console = []
# Workaround to avoid activating `tokio-console` with `--all-features` flag, because `tokio-console` require `tokio_unstable` rustc flag
no-tokio-console = []
