[package]
name = "iroha_config"

edition.workspace = true
version.workspace = true
authors.workspace = true

license.workspace = true

[lints]
workspace = true

[dependencies]
iroha_config_base = { workspace = true }
iroha_data_model = { workspace = true }
iroha_primitives = { workspace = true }
iroha_crypto = { workspace = true }
iroha_genesis = { workspace = true }

eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "ansi"] }
url = { workspace = true, features = ["serde"] }

serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
json5 = { workspace = true }
thiserror = { workspace = true }
displaydoc = { workspace = true }
derive_more = { workspace = true }
cfg-if = { workspace = true }
once_cell = { workspace = true }
nonzero_ext = "0.3.0"
toml = "0.8.8"
parse-display = { workspace = true }
merge = "0.1.0"

[dev-dependencies]
proptest = "1.3.1"
stacker = "0.1.15"
expect-test = { workspace = true }
trybuild = { workspace = true }
hex = { workspace = true }

[features]
tokio-console = []
