[package]
name = "iroha_crypto"

edition.workspace = true
version.workspace = true
authors.workspace = true

license.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
# Enable static linkage of the rust standard library.
# Please refer to https://docs.rust-embedded.org/book/intro/no-std.html
std = [
    "ursa",
    "blake2",
    "sha2",
    "hkdf",
    "amcl_wrapper",
    "ed25519-dalek",
    "curve25519-dalek",
    "x25519-dalek",
    "rand",
    "rand_chacha",
    "secp256k1",
    "zeroize",
    "arrayref",
    "aead",
    "chacha20poly1305",
    "k256",
]
# Force static linking
vendored = ["openssl-sys"]
# Replace structures and methods with FFI equivalents to facilitate dynamic linkage (mainly used in smartcontracts)
#ffi_import = ["iroha_ffi", "iroha_primitives/ffi_import"]

# Expose FFI API for dynamic linking (Internal use only)
ffi_export = ["std", "iroha_ffi", "iroha_primitives/ffi_export"]

[dependencies]
iroha_primitives = { workspace = true }
iroha_macro = { workspace = true }
iroha_ffi = { workspace = true, optional = true }
iroha_schema = { workspace = true }

derive_more = { workspace = true, features = ["deref", "deref_mut", "display"] }
parity-scale-codec = { workspace = true, features = ["derive", "full"] }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["macros"] }
hex = { workspace = true, features = ["alloc", "serde"] }
openssl-sys = { version = "0.9.93", features = ["vendored"], optional = true }
getset = { workspace = true }

ursa = { workspace = true, optional = true }
blake2 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.8", optional = true }
hkdf = { version = "0.12.3", optional = true }
amcl_wrapper = { version = "0.4.0", optional = true }

# TODO: bump these
ed25519-dalek = { version = "1.0.1", optional = true }
curve25519-dalek = { version = "3.2.1", optional = true }
x25519-dalek = { version = "1.2.0", optional = true }

# TODO: bump me
rand = { version = "0.7", optional = true }
# TODO: bump me
rand_chacha = { version = "0.2", optional = true }

# TODO: bump me
secp256k1 = { version = "0.19", features = ["rand", "serde"], optional = true }

# TODO: bump me
zeroize = { version = "1.1", optional = true }
arrayref = { version = "0.3.7", optional = true }

# TODO: bump me
aead = { version = "0.3", optional = true }
# TODO: bump me
chacha20poly1305 = { version = "0.7", optional = true }

# TODO: bump me
k256 = { version = "0.9.6", optional = true, features = ["ecdh", "ecdsa", "sha256"]}

[dev-dependencies]
hex-literal = { workspace = true }
serde_json = { workspace = true }

# these crypto libraries are not used to implement actual crypto algorithms
# but to test some of the primitives against them
secp256k1 = { version = "0.28.0", features = ["rand", "serde"] }
libsodium-sys-stable = "1.20.3"
openssl = "0.10.59"
