[package]
name = "iroha_crypto_cli"
version = "0.1.0"
authors = ["Iroha 2 team <https://github.com/orgs/soramitsu/teams/iroha2>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iroha_crypto = { version = "=0.1.0", path = "../crypto" }

clap = "2.33.0"
color-eyre = "0.5.11"
hex = "0.4.0"
serde_json = "1.0"
