[package]
name = "iroha_data_model"

edition.workspace = true
version.workspace = true
authors.workspace = true

license.workspace = true
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/hyperledger/iroha" }
is-it-maintained-open-issues = { repository = "https://github.com/hyperledger/iroha" }
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
# Enable static linkage of the rust standard library.
# Disabled for WASM interoperability, to reduce the binary size.
# Please refer to https://docs.rust-embedded.org/book/intro/no-std.html
std = ["iroha_macro/std", "iroha_version/std", "iroha_crypto/std", "iroha_primitives/std", "thiserror", "strum/std", "dashmap", "tokio"]
# Enable API for HTTP requests. Should be activated for HTTP clients
http = ["std", "warp", "iroha_version/http"]
# Replace structures and methods with FFI equivalents to facilitate dynamic linkage (mainly used in smartcontracts)
#ffi_import = ["iroha_ffi", "iroha_primitives/ffi_import", "iroha_crypto/ffi_import"]

# Expose FFI API for dynamic linking (Internal use only)
ffi_export = ["std", "iroha_ffi", "iroha_primitives/ffi_export", "iroha_crypto/ffi_export"]
# Expose API for mutating structures (Internal use only)
transparent_api = []

[dependencies]
iroha_primitives = { path = "../primitives", version = "=2.0.0-pre-rc.13", default-features = false }
iroha_data_model_derive = { path = "derive", version = "=2.0.0-pre-rc.13" }
iroha_crypto = { path = "../crypto", version = "=2.0.0-pre-rc.13", default-features = false }
iroha_macro = { path = "../macro", version = "=2.0.0-pre-rc.13", default-features = false }
iroha_version = { path = "../version", version = "=2.0.0-pre-rc.13", default-features = false, features = ["derive", "json", "scale"] }
iroha_schema = { path = "../schema", version = "=2.0.0-pre-rc.13" }
iroha_ffi = { path = "../ffi", version = "=2.0.0-pre-rc.13", optional = true }

dashmap = { version = "5.4.0", optional = true }
tokio = { version = "1.23.0", features = ["sync", "rt-multi-thread"], optional = true }
parity-scale-codec = { version = "3.2.1", default-features = false, features = ["derive"] }
derive_more = { version = "0.99.17", default-features = false, features = ["as_ref", "display", "constructor", "from_str", "from", "into"] }
serde = { version = "1.0.151", default-features = false, features = ["derive"] }
serde_with = {version = "2.1.0", default-features = false, features = ["macros"]}
serde_json = { version = "1.0.91", default-features = false }
warp = { version = "0.3.3", default-features = false, optional = true }
thiserror = { version = "1.0.38", optional = true }
getset = "0.1.2"
strum = { version = "0.24.1", default-features = false, features = ["derive"] }
base64 = { version = "0.13.1", default-features = false, features = ["alloc"]}

[dev-dependencies]
iroha_client = { path = "../client", version = "=2.0.0-pre-rc.13" }

trybuild = "1.0.73"
criterion = "0.3.6"

[[bench]]
name = "time_event_filter"
harness = false
