[package]
name = "iroha_data_model"
version = "2.0.0-pre-rc.9"
authors = ["Iroha 2 team <https://github.com/orgs/soramitsu/teams/iroha2>"]
edition = "2021"
description = "Iroha uses a simple data model made up of domains, peers, accounts, assets, signatories, and permissions. This library contains basic data model structures."
readme = "README.md"
homepage = "https://github.com/hyperledger/iroha/tree/iroha2-dev"
repository = "https://github.com/hyperledger/iroha/tree/iroha2-dev"
license = "Apache-2.0"
keywords = ["crypto", "blockchain", "ledger", "iroha", "model"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/hyperledger/iroha" }
is-it-maintained-open-issues = { repository = "https://github.com/hyperledger/iroha" }
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
# Enable static linkage of the rust standard library.
# Disabled for WASM interoperability, to reduce the binary size.
# Please refer to https://docs.rust-embedded.org/book/intro/no-std.html
std = ["iroha_macro/std", "iroha_version/std", "iroha_version/warp", "iroha_crypto/std", "iroha_primitives/std", "thiserror", "strum/std", "dashmap", "tokio"]
# Replace structures and methods with FFI equivalents to facilitate dynamic linkage (mainly used in smartcontracts)
#ffi_import = ["iroha_crypto/ffi_import"]

# Expose FFI API for dynamic linking (Internal use only)
ffi_export = ["std", "iroha_crypto/ffi_export"]
# Expose API for mutating structures (Internal use only)
mutable_api = []

[dependencies]
iroha_primitives = { path = "../primitives", version = "=2.0.0-pre-rc.9", default-features = false }
iroha_data_model_derive = { path = "derive", version = "=2.0.0-pre-rc.9" }
iroha_crypto = { path = "../crypto", version = "=2.0.0-pre-rc.9", default-features = false }
iroha_macro = { path = "../macro", version = "=2.0.0-pre-rc.9", default-features = false }
iroha_version = { path = "../version", version = "=2.0.0-pre-rc.9", default-features = false, features = ["derive", "json", "scale"] }
iroha_schema = { path = "../schema", version = "=2.0.0-pre-rc.9" }
iroha_ffi = { path = "../ffi", version = "=2.0.0-pre-rc.9" }

dashmap = { version = "5.3.4", optional = true }
tokio = { version = "1.20.1", features = ["sync", "rt-multi-thread"], optional = true }
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }
derive_more = { version = "0.99.17", default-features = false, features = ["as_ref", "display", "constructor", "from_str", "from", "into"] }
serde = { version = "1.0.142", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.83", default-features = false }
serde_with = {version = "2.0.1", default-features = false, features = ["macros"]}
warp = { version = "0.3.2", default-features = false, optional = true }
thiserror = { version = "1.0.32", optional = true }
getset = "0.1.2"
strum = { version = "0.24.1", default-features = false, features = ["derive"] }
base64 = { version = "0.13.0", default-features = false, features = ["alloc"]}
enum-kinds = { version = "0.5.1", default-features = false, features = ["no-stdlib"] }

[dev-dependencies]
iroha_core = { path = "../core", version = "=2.0.0-pre-rc.9" }
iroha_client = { path = "../client", version = "=2.0.0-pre-rc.9" }
iroha = { path = "../cli" }

test_network = { path = "../core/test_network", version = "=2.0.0-pre-rc.9" }

tokio = { version = "1.20.1", features = ["rt", "rt-multi-thread"] }
trybuild = "1.0.64"
criterion = "0.3.6"

[[bench]]
name = "time_event_filter"
harness = false
